Added logger demo to demo links on main index

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,5 +8,30 @@
 </head>
 <body>
 
+    <h1>Introducing Your New Entourage!</h1>
+    <p>
+        Take a moment to get acquainted with your new cast of characters that you can call "your entourage."
+    </p>
+    <ul>
+        <li><a href="#historian" class="cast">Historian</a>
+
+        </li>
+        <li><a href="#logger" class="cast">Logger</a>
+
+        </li>
+        <li><a href="#postalworker" class="cast">Postal Worker</a>
+
+        </li>
+        <li><a href="#securitymanager" class="cast">Security Manager</a>
+
+        </li>
+        <li><a href="#storagemanager" class="cast">Storage Manager</a>
+
+        </li>
+        <li><a href="#translator" class="cast">Translator</a>
+
+        </li>
+    </ul>
+
 </body>
 </html>
