Converted demo display to web component

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Entourage Demo</title>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.5.2/CustomElements.js"></script>
     <script src="../dist/demo.js"></script>
 </head>
 <body>
@@ -32,10 +32,6 @@
 
         </li>
     </ul>
-
-    <div id="demo">
-        
-    </div>
 
 </body>
 </html>
